<resources>
    <string name="app_name">捡喽</string>
    <string name="shouye">首页</string>
    <string name="shequ">社区</string>
    <string name="xiaoxi">消息</string>
    <string name="wode">我的</string>
    <string name="fabu">发布</string>
    <string name="queren">确认</string>
    <string name="fenlei">分类</string>
    <string name="shouji">手机</string>
    <string name="shengxianshuiguo">生鲜水果</string>
    <string name="youxi">游戏</string>
    <string name="dianzilingjian">电子零件</string>
    <string name="tushu">图书</string>
    <string name="dongmanzhoubian">动漫/周边</string>
    <string name="chongwuyongpin">宠物/用品</string>
    <string name="wangluoshebei">网络设备</string>
    <string name="bangongyongpin">办公用品</string>
    <string name="youxishebei">游戏设备</string>
    <string name="yundonghuwai">运动户外</string>
    <string name="wangjuyueqi">玩具乐器</string>
    <string name="jiayongdianqi">家用电器</string>
    <string name="qixingyongju">骑行用具</string>
    <string name="shuma">3C数码</string>
    <string name="yinxiang">音像</string>
    <string name="menpiao">门票</string>
    <string name="jujiariyong">居家日用</string>
    <string name="shitikapian">实体卡片</string>
    <string name="qita">其他</string>
    <string name="jiaqian">价钱</string>
    <string name="jiage">价格</string>
    <string name="money_zero">0.00</string>
    <string name="rushoujia">入手价</string>
    <string name="baoyou">包邮</string>
    <string name="anjuligusuan">按距离估算</string>
    <string name="yunfei">运费</string>
    <string name="fabuxianzhi">发布闲置</string>
    <string name="fatiezi">发帖子</string>
    <string name="time">00:00</string>
    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="zhucexinyonghu">注册新用户</string>
    <string name="lianxikefu">联系客服</string>
    <string name="aboutus">关于我们</string>
    <string name="register">注册</string>
    <string name="hint_login_password_again">再次输入密码</string>
    <string name="account_have">已有账号？点我登录</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
